# NanoparticleEOutput

./: .gitignore  README.md
Scripts/: .#Average_Energy_x.py  .#averageEnergyProton.cc  .#averageProtonEnergy.m  .#averageProtonEnergyDoubleCountRemoved.m  .fuse_hidden000000d000000001  Average_Energy_x.csv  Average_Energy_x.py  Bin_Energy_x.csv  Bin_Energy_x.py  Bin_Secodnary_e_init.csv  Bin_Secondary_e_init.py  Bin_Secondary_x_init.py  Bin_Secondary_x_init_nogold.csv  Bin_eDeps_x.py  Cambridge_alumina_120MeV_proc.csv  Cambridge_alumina_180MeV_proc.csv  Cambridge_alumina_60MeV_proc.csv  Cambridge_gold_120MeV_proc.csv  Cambridge_gold_180MeV_proc.csv  Cambridge_gold_60MeV_proc.csv  Cambridge_water_120MeV_proc.csv  Cambridge_water_180MeV_proc.csv  Cambridge_water_60MeV_proc.csv  Count_Secondaries_in_Gold_Regions.py  Current_Calc.py  EOutput  EOutput.cc  EOutput.m  Secondary_Average_Energy_x.csv  Secondary_Average_Energy_x.py  Stopping_Power_x.csv  Stopping_Power_x.py  Total_Energy_x.csv  Total_Energy_x.py  averageEnergyProton  averageEnergyProton.cc  (+24 more)
Scripts/CPP_Scripts/Secondary_Electron_Energy_Spectra_Surface/Source/: CMakeLists.txt  Secondary_Electron_Energy_Spectra_Surface.cc
Scripts/CPP_Scripts/Secondary_Electron_Energy_Spectra_Surface/Source/include/: AllPass.hh  AnalysisTool.hh  MemMapRead.hh  PlottingTool.hh  StackingTool.hh  SurfaceEnergy.hh  SurfaceEnergyAugerElectron.hh  SurfaceEnergyPhotoElectron.hh  WorkerManager.hh  WritingTool.hh
Scripts/CPP_Scripts/Secondary_Electron_Energy_Spectra_Surface/Source/src/: AllPass.cc  AnalysisTool.cc  MemMapRead.cc  PlottingTool.cc  StackingTool.cc  SurfaceEnergy.cc  SurfaceEnergyAugerElectron.cc  SurfaceEnergyPhotoElectron.cc  WorkerManager.cc  WritingTool.cc
(+33 files in other folders)
